# backmagic

./: pyproject.toml
api/: __init__.py  endpoints.py
api/models/: __init__.py  admins.py  leaderboard.py
api/templates/: base.html  index.html  leaderboard.html  login.html  success.html
api/templates/admin/: index.html
instance/: project.db
migrations/versions/: 636ab9a1c4c1_.py  72488102da10_.py
