[tool.poetry]
name = "backmagic"
version = "1.0.0"
description = "Backend API of LUG VITC"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.1"
Flask-SQLAlchemy = "^3.1.1"
Flask-Admin = "^1.6.1"
Flask-Login = "^0.6.3"
flask-cors = "^4.0.0"
bcrypt = "^4.1.2"
flask-migrate = "^4.0.5"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
